@startuml
'https://plantuml.com/class-diagram

class Client {
}

class Flyweight{
+ operation()
}
class ConcreteFlyweight extends Flyweight{}
class UnsharedFlyweight extends Flyweight{}
class FlyweightFactory {
+ getFlyweight(Key)
}
Client --> FlyweightFactory
'水平聚合
FlyweightFactory o-> Flyweight :: Creates

Client --> ConcreteFlyweight
Client --> UnsharedFlyweight :: Uses

@enduml